welcome.lessons.welcome.array.array667.Array667.scala.error
array667:20: error: ';' expected but 'else' found.
	}else{
         ^array667:40: error: expected class or object definition
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
^array667:55: error: Unmatched closing brace '}' ignored here
 }
 ^